--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ hs_err_pid*
 /.apt_generated/
 /hs*.log
 .env
+# These objects are created after each compilation, so there is no need to keep track of them in the repo
+/src/main/java/com/st/dto/schemas/
