--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,6 @@ services:
   - postgresql
 addons:
   postgresql: "9.4"
+before_script:
+  - psql -c 'create database herokusalesforcedb;' -U postgres
+  - psql -c 'create schema salesforcedev;' -U postgres
