--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ addons:
   postgresql: "9.4"
 before_script:
   - psql -c 'create database herokusalesforcedb;' -U postgres
-  - psql -c 'create schema salesforcedev;' -U postgres
+  - psql -c 'create schema if not exists public;' -U postgres
+  - psql -c 'create schema if not exists salesforcedev;' -U postgres
   - psql -c "alter role postgres with password 'postgres';"
